--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!-- Hero Section with Profile Picture -->
 <section class="bg-primary text-white text-center py-5">
   <div class="container">
-    <img src="images/profile.jpg" alt="Your Name" class="profile-img mb-3"/>
+    <img src="profile.jpg" alt="Your Name" class="profile-img mb-3"/>
     <h1>Hello, I'm Dominic Dulatre</h1>
     <p class="lead">Web Developer | Designer</p>
   </div>
