--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="row mt-4">
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="images/project1.jpg" class="card-img-top" alt="Project One">
+          <img src="project1.jpg" class="card-img-top" alt="Project One">
           <div class="card-body">
             <h5 class="card-title">Project One</h5>
             <p class="card-text">Art Gallery Website</p>
@@ -75,7 +75,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="images/project2.jpg" class="card-img-top" alt="Project Two">
+          <img src="project2.jpg" class="card-img-top" alt="Project Two">
           <div class="card-body">
             <h5 class="card-title">Project Two</h5>
             <p class="card-text">Log In / Sign Up Page UI.</p>
@@ -85,7 +85,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="images/project3.jpg" class="card-img-top" alt="Project Three">
+          <img src="project3.jpg" class="card-img-top" alt="Project Three">
           <div class="card-body">
             <h5 class="card-title">Project Three</h5>
             <p class="card-text">Resume / CV Website like this one.</p>
